--- a/dns-rc.cabal
+++ b/dns-rc.cabal
@@ -11,7 +11,7 @@ extra-source-files:  CHANGELOG.md
 
 executable dns-rc
   main-is:             Main.hs
-  -- other-modules:
+  other-modules:       Types
   build-depends:       base >=4.13 && <4.14,
                        rio,
                        conduit,
