--- a/dns-rc.cabal
+++ b/dns-rc.cabal
@@ -13,6 +13,7 @@ executable dns-rc
   main-is:             Main.hs
   other-modules:       Types
   build-depends:       base >=4.13 && <4.14,
+                       bytestring,
                        rio,
                        conduit,
                        conduit-extra,
