Finish types and add cabal deps for parser

--- a/dns-rc.cabal
+++ b/dns-rc.cabal
@@ -19,6 +19,8 @@ executable dns-rc
                        conduit-extra,
                        iproute,
                        lens,
+                       megaparsec,
+                       parser-combinators,
                        network
   default-extensions:  BangPatterns
                      , BinaryLiterals
