Handle AAAA records and multiple questions

--- a/dns-rc.cabal
+++ b/dns-rc.cabal
@@ -23,6 +23,7 @@ executable dns-rc
                        lens,
                        megaparsec,
                        parser-combinators,
+                       pretty-simple,
                        network
   default-extensions:  BangPatterns
                      , BinaryLiterals
