--- a/dns-rc.cabal
+++ b/dns-rc.cabal
@@ -1,4 +1,4 @@
-cabal-version:       >=1.10
+cabal-version:       3.0
 name:                dns-rc
 version:             0.1.0.0
 synopsis:            Recursive dns server for hackathon
@@ -9,22 +9,7 @@ category:            Network
 build-type:          Simple
 extra-source-files:  CHANGELOG.md
 
-executable dns-rc
-  main-is:             Main.hs
-  other-modules:       Types,
-                       Parser
-  build-depends:       base >=4.13 && <4.14,
-                       rio,
-                       bytestring,
-                       bitvec,
-                       conduit,
-                       conduit-extra,
-                       iproute,
-                       lens,
-                       megaparsec,
-                       parser-combinators,
-                       pretty-simple,
-                       network
+common shared
   default-extensions:  BangPatterns
                      , BinaryLiterals
                      , BlockArguments
@@ -73,3 +58,30 @@ executable dns-rc
                      , TypeSynonymInstances
                      , ViewPatterns
   default-language:    Haskell2010
+  build-depends:       base >=4.13 && <4.14,
+                       rio,
+                       bytestring,
+                       bitvec,
+                       iproute,
+                       lens,
+                       pretty-simple,
+                       network
+library
+  import: shared
+  exposed-modules: Types, Parser
+  hs-source-dirs:  src
+
+executable dns-rc
+  import: shared
+  main-is:             Main.hs
+  build-depends:       dns-rc
+
+test-suite test
+  import: shared
+  main-is: Test.hs
+  type: exitcode-stdio-1.0
+  build-depends: dns-rc,
+                 hedgehog,
+                 tasty,
+                 tasty-hedgehog
+
