--- a/dns-rc.cabal
+++ b/dns-rc.cabal
@@ -59,13 +59,14 @@ common shared
                      , ViewPatterns
   default-language:    Haskell2010
   build-depends:       base >=4.13 && <4.14,
-                       rio,
-                       bytestring,
                        bitvec,
+                       bytestring,
                        iproute,
                        lens,
+                       mtl,
+                       network,
                        pretty-simple,
-                       network
+                       rio
 library
   import: shared
   exposed-modules: Types, Parser
