Default query and function to query a particular nameserver ip

--- a/dns-rc.cabal
+++ b/dns-rc.cabal
@@ -64,6 +64,8 @@ common shared
     , base           ^>=4.13
     , bitvec
     , bytestring
+    , data-default
+    , errors
     , iproute
     , lens
     , mtl
